--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,6 +15,6 @@
       "default_icon": "icons/beasts-32.png"
     },
     "background": {
-        "scripts": ["tabtastic.js"]
+        "scripts": ["background.js"]
     }
   }
