--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "**Tabtastic** is a free Firefox add-on that helps you wrangle your current open tabs.",
   "main": "tabtastic.js",
   "scripts": {
-    "start": "web-ext run --source-dir ./src/ --devtools",
+    "start:firefox": "web-ext run --source-dir ./src/ --devtools",
+    "start:chrome": "web-ext run -t chromium --source-dir ./src/ --devtools",
+    "start": "web-ext run -t firefox-desktop -t chromium --source-dir ./src/ --devtools",
     "lint": "web-ext lint --source-dir ./src/",
     "build": "npm run lint && web-ext build --source-dir ./src/ --overwrite-dest"
   },
