--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,6 +24,7 @@
       }
     },
     "background": {
-        "scripts": ["background.js"]
+        "scripts": ["background.js"],
+        "persistent": false
     }
   }
